# Fyrox-Nova-Forge

./: .gitignore  build.sh
novaforge/: Cargo.toml  README.md
novaforge/executor/: Cargo.toml
novaforge/executor/src/: main.rs
novaforge/game/: Cargo.toml
novaforge/game/src/: character.rs  combat.rs  economy.rs  faction.rs  lib.rs  npc_ship.rs  player_ship.rs  ship.rs  skills.rs
